# repo-brain

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  planning.md  pyproject.toml
.repo-brain/: REPO_MAP.md  call_graph.json  config.json  file_hashes.json  imports.json  last_context.json  last_export.md  last_impact.json  repo_map.json  symbols.json  tests.json
docs/: PRD.md  repo_context_engine_prd.md  user-journey.md
skills/: README.md  bug-investigation.md  feature-implementation.md  setup.md
src/repo_brain/: cli.py  config.py  context.py  export.py  gaps.py  impact.py  mcp_server.py  models.py  scanner.py  watch.py
src/repo_brain/parsers/: fastapi.py  go.py  node.py  pytest.py  python_ast.py
src/repo_brain/skills/: impact-analysis.md  safe-refactor.md  test-coverage.md
src/repo_brain/writers/: json_writer.py  markdown_writer.py
tests/: test_call_graph.py  test_context.py  test_export.py  test_fastapi_routes.py  test_gaps.py  test_go.py  test_impact.py  test_mcp_server.py  test_node.py  test_pytest_detection.py  test_python_ast.py  test_scanner.py  test_watch.py
